[gd_scene load_steps=10 format=3 uid="uid://c132wqyjajus"]

[ext_resource type="Script" path="res://Scripts/Entity/player.gd" id="1_bh53k"]
[ext_resource type="Script" path="res://Scripts/Gameplay/player_camera.gd" id="2_to0fs"]
[ext_resource type="PackedScene" uid="uid://cm1owowko7xp6" path="res://Components/GUI/crosshair.tscn" id="3_wd86n"]
[ext_resource type="PackedScene" uid="uid://bgipihsq8wx5c" path="res://Components/health_component.tscn" id="4_t4iim"]
[ext_resource type="PackedScene" uid="uid://b2mqdrvgix4wh" path="res://Components/sfx_component.tscn" id="5_4ktyq"]
[ext_resource type="PackedScene" uid="uid://bh4skt3i0l186" path="res://Components/player_input_component.tscn" id="5_wxa0a"]
[ext_resource type="PackedScene" uid="uid://cghxhp735mp0e" path="res://Components/GUI/state_display.tscn" id="6_7o2co"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_lckba"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1d1pi"]
size = Vector3(1, 1.78802, 1)

[node name="Player" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 23
script = ExtResource("1_bh53k")

[node name="PlayerModel" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_lckba")

[node name="CollisionBox" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.075592, 0)
shape = SubResource("BoxShape3D_1d1pi")

[node name="PlayerCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.544727, 0)
script = ExtResource("2_to0fs")

[node name="PickUpRange" type="RayCast3D" parent="PlayerCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, -1.85951e-07, -1, 0, 4.25408, -4.37114e-08, 0, -0.0645372, -0.477913)
collision_mask = 20

[node name="HoldPoint" type="Node3D" parent="PlayerCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.000983549, 0.0106555, -1.71784)

[node name="Flashlight" type="SpotLight3D" parent="PlayerCamera"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.777589)
light_energy = 0.0
spot_range = 7.76786
spot_angle = 30.579

[node name="SFXComponent" parent="." instance=ExtResource("5_4ktyq")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.124481, 1.13518, -0.656423)

[node name="HealthComponent" parent="." instance=ExtResource("4_t4iim")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.5, 0.34407, 0.206489)
max_health = 100

[node name="PlayerInputComponent" parent="." instance=ExtResource("5_wxa0a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.04457, 0.969602, -0.287252)

[node name="StateDisplay" parent="." instance=ExtResource("6_7o2co")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="Crosshair" parent="." instance=ExtResource("3_wd86n")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="movement_begin" from="." to="SFXComponent" method="_on_player_movement_begin"]
[connection signal="movement_end" from="." to="SFXComponent" method="_on_player_movement_end"]
[connection signal="health_zero" from="HealthComponent" to="." method="_on_health_component_health_zero"]
[connection signal="pick_up" from="PlayerInputComponent" to="." method="_on_player_input_component_pick_up"]
[connection signal="toggle_flashlight" from="PlayerInputComponent" to="." method="_on_player_input_component_toggle_flashlight"]
